src/rules/isort/snapshots/ruff__rules__isort__tests__combine_as_imports.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    content: "from module import CONSTANT, function\nfrom module import Class as C\nfrom module import function as f\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
  parent: ~

