src/rules/isort/snapshots/ruff__rules__isort__tests__comments.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 34
    column: 0
  fix:
    content: "import B  # Comment 4\n\n# Comment 3a\n# Comment 3b\nimport C\nimport D\n\n# Comment 5\n# Comment 6\nfrom A import (\n    a,  # Comment 7  # Comment 9\n    b,  # Comment 10\n    c,  # Comment 8  # Comment 11\n)\nfrom D import (\n    a_long_name_to_force_multiple_lines,  # Comment 12\n    another_long_name_to_force_multiple_lines,  # Comment 13\n)\nfrom E import a  # Comment 1\nfrom F import (\n    a,  # Comment 1\n    b,\n)\n"
    location:
      row: 3
      column: 0
    end_location:
      row: 34
      column: 0
  parent: ~

