src/rules/isort/snapshots/ruff__rules__isort__tests__force_wrap_aliases.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 0
  fix:
    content: "from .a import a1 as a1\nfrom .a import a2 as a2\nfrom .b import b1 as b1\nfrom .c import c1\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 4
      column: 0
  parent: ~

